[project]
name = "tiger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.0.1",
    "librosa>=0.11.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "ptflops>=0.7.5",
    "pytorch-lightning>=2.5.5",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "safetensors>=0.6.2",
    "scipy-stubs==1.16.3.0",
    "torch>=2.9.0",
    "torch-complex>=0.4.4",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.1",
    "wandb>=0.22.3",
]

[[tool.uv.index]]
#url = "https://download.pytorch.org/whl/cpu"
url = "https://download.pytorch.org/whl/cu118"

